<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/choose"
            android:textColor="@android:color/background_dark"
            android:textFontWeight="@android:integer/config_mediumAnimTime"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/standard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="66.6"
                android:background="@android:color/holo_blue_bright"
                android:fontFamily="casual"
                android:text="@string/standard"
                android:textColor="@android:color/background_dark"
                app:layout_constraintBottom_toBottomOf="@+id/recycleview"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/title1"
                tools:layout_editor_absoluteX="33dp"
                tools:layout_editor_absoluteY="147dp" />

            <Button
                android:id="@+id/premium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="66.6"
                android:background="@android:color/holo_blue_bright"
                android:fontFamily="casual"
                android:text="@string/premium"
                android:textColor="@android:color/background_dark"
                app:layout_constraintBottom_toBottomOf="@+id/recycleview"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/title1"
                tools:layout_editor_absoluteX="161dp"
                tools:layout_editor_absoluteY="138dp" />

            <Button
                android:id="@+id/presidential"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="66.6"
                android:background="@android:color/holo_blue_bright"
                android:fontFamily="casual"
                android:text="@string/presidential"
                android:textColor="@android:color/background_dark"
                app:layout_constraintBottom_toBottomOf="@+id/recycleview2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/title1"
                tools:layout_editor_absoluteX="283dp"
                tools:layout_editor_absoluteY="147dp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleview2"
            android:layout_width="match_parent"
            android:layout_height="614dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>